--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         #preloader {
             transition-duration: 0.5s;
             z-index: 99999;
+            font-family: 'Poppins', sans-serif;
         }
 
         #preloader {
